k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cms-demo
  labels:
    name: cms-demo
    app: demo-cms
