k8s/media-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: media-worker
  namespace: cms-demo
  labels:
    app: media-worker
    component: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: media-worker
  template:
    metadata:
      labels:
        app: media-worker
        component: worker
    spec:
      automountServiceAccountToken: false
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: media-worker
        image: demo-cms-media-worker:latest
        imagePullPolicy: IfNotPresent
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          runAsNonRoot: true
          runAsUser: 1654
          runAsGroup: 1654
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
