k8s/canvas-load-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: canvas-load
  namespace: cms-demo
  labels:
    app: canvas-load
spec:
  type: LoadBalancer
  selector:
    app: canvas-load
    statefulset.kubernetes.io/pod-name: canvas-load-0
  ports:
    - name: http
      port: 8090
      targetPort: 8090
    - name: metrics
      port: 9091
      targetPort: 9091
